samples/_failures_safe/1761482174_870836_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_525f7b99.c: In function ‘main’:
./samples/SAFE/__tmp_525f7b99.c:180:28: error: missing terminating " character
  180 |                     printf("Invalid option
      |                            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_525f7b99.c:180:21: error: expected expression at end of input
  180 |                     printf("Invalid option
      |                     ^~~~~~
./samples/SAFE/__tmp_525f7b99.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_525f7b99.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_525f7b99.c:180:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_525f7b99.c:180:21: error: expected declaration or statement at end of input
